@@ -1,6 +1,16 @@
 Revision history for Perl extension Devel-Mockify
 
 {{$NEXT}}
+    - fix problems with static mocks
+    - clean up project
+    - remove deprecated methods
+    - use everywhere Error in order to get the Error stack
+    - allow mock of static methods
+    - fix critic (brutal)
+    - add Example section
+    - fix (and add) some typos
+    - fix another number bug
+    - improve error output
 
 1.3 2018-01-29T16:37:11Z
     - add static mock option thx to @dbucky for this idea
